--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         }
 
         .content {
-          flex: 1 0 500px;
+          flex: 1 1 auto;
           overflow-y: hidden;
           font-size: 24px;
         }
